# htgettoken

./: .gitignore  COPYING  MANIFEST.in  Makefile  README.md  RELEASE_PROCEDURE  htdecodetoken  htdecodetoken.1  htdecodetoken.html  htdestroytoken  htdestroytoken.1  htdestroytoken.html  htgettoken  htgettoken.1  htgettoken.html  htgettoken.py  htgettoken.spec  httokendecode  httokensh  httokensh.1  httokensh.html  make-downloads  setup.cfg  setup.py
.github/workflows/: build.yml  check.yml  test.yml
debian/: changelog  control  copyright  htgettoken.install  rules  watch
htgettoken/: __init__.py
tests/: .gitignore  .regress-config.template  regress-check
tests/001-oidcauth/: main
tests/003-kerberosauth/: main
tests/003-sshauth/: main
tests/004-decodetoken/: main
tests/005-scopeexchange/: main
tests/006-audienceexchange/: main
tests/007-minsecs/: main
tests/008-minsecsexchange/: main
tests/010-kerbprincipal/: main
tests/011-credkey/: main
tests/012-vaultttl/: main
tests/013-showbearerurl/: main
tests/014-checkdefaultsub/: main
tests/015-checkgroupsub/: main
