[metadata]
name = htgettoken
version = 1.18
author = Dave Dykstra
author_email = dwd@fnal.gov
license = BSD-3-Clause
license_files = COPYING
long_description = file: README.md
long_description_content_type = text/markdown
# urls
url = https://github.com/fermitools/htgettoken
project_urls =
	Bug Tracker = https://github.com/fermitools/htgettoken/issues
	Source Code = https://github.com/fermitools/htgettoken
# classifiers
classifiers =
	Development Status :: 4 - Beta
	Intended Audience :: Science/Research
	License :: OSI Approved :: BSD License
	Natural Language :: English
	Programming Language :: Python
	Programming Language :: Python :: 3.5
	Programming Language :: Python :: 3.6
	Programming Language :: Python :: 3.7
	Programming Language :: Python :: 3.8
	Programming Language :: Python :: 3.9
	Programming Language :: Python :: 3.10
	Programming Language :: Python :: 3.11

[options]
# contents
py_modules =
	htgettoken
scripts =
	htdestroytoken
	httokendecode
# requirements
python_requires = >=3.5
install_requires =
	gssapi
	paramiko
	urllib3

[options.entry_points]
console_scripts =
	htgettoken = htgettoken:main
